--- a/front-tourist-activities/.env
+++ b/front-tourist-activities/.env
@@ -4,3 +4,4 @@ VITE_AUTH_REGISTER=/auth/registro
 VITE_AUTH_LOGIN=/auth/login
 VITE_AUTH_ME=/auth/me
 VITE_BACKEND_URL=http://localhost:3000
+VITE_AUTH_GET_USER=/auth/me
