--- a/front-tourist-activities/.env.copy
+++ b/front-tourist-activities/.env.copy
@@ -5,3 +5,4 @@ VITE_AUTH_LOGIN=/auth/login
 VITE_AUTH_ME=/auth/me
 VITE_BACKEND_URL=http://localhost:3000
 VITE_AUTH_GET_USER=/auth/me
+VITE_ACTIVIDADES=/recomendaciones
