--- a/front-tourist-activities/.env
+++ b/front-tourist-activities/.env
@@ -7,3 +7,4 @@ VITE_BACKEND_URL=http://localhost:3000
 VITE_AUTH_GET_USER=/auth/me
 VITE_API_ACTIVIDADES=/recomendaciones
 VITE_API_PACKS=/packs
+VITE_API_CALENDAR_ACTS=/actividades
