--- a/front-tourist-activities/.env
+++ b/front-tourist-activities/.env
@@ -8,3 +8,4 @@ VITE_AUTH_GET_USER=/auth/me
 VITE_API_ACTIVIDADES=/recomendaciones
 VITE_API_PACKS=/packs
 VITE_API_CALENDAR_ACTS=/actividades
+VITE_API_CALENDAR_ACTS_USER=/actividades/user
