--- a/front-tourist-activities/.env
+++ b/front-tourist-activities/.env
@@ -5,6 +5,7 @@ VITE_AUTH_LOGIN=/auth/login
 VITE_AUTH_ME=/auth/me
 VITE_BACKEND_URL=http://localhost:3000
 VITE_AUTH_GET_USER=/auth/me
+VITE_API_ACTIVIDADES_PUBLIC=/recomendaciones/public
 VITE_API_ACTIVIDADES=/recomendaciones
 VITE_API_PACKS=/packs
 VITE_API_CALENDAR_ACTS=/actividades
