--- a/front-tourist-activities/.env
+++ b/front-tourist-activities/.env
@@ -1,4 +1,4 @@
-VITE_API_URL=http://localhost:3000
+VITE_API_URL=https://backend-proyecto-final-fullstack.vercel.app
 VITE_API_ROUTER=/api/v1
 VITE_AUTH_REGISTER=/auth/registro
 VITE_AUTH_LOGIN=/auth/login
