--- a/front-tourist-activities/.env.copy
+++ b/front-tourist-activities/.env.copy
@@ -1,9 +1,7 @@
-VITE_API_URL=http://localhost:3000
+VITE_API_URL=https://backend-proyecto-final-fullstack.vercel.app
 VITE_API_ROUTER=/api/v1
 VITE_AUTH_REGISTER=/auth/registro
 VITE_AUTH_LOGIN=/auth/login
-VITE_AUTH_ME=/auth/me
-VITE_BACKEND_URL=http://localhost:3000
 VITE_AUTH_GET_USER=/auth/me
 VITE_API_ACTIVIDADES_PUBLIC=/recomendaciones/public
 VITE_API_ACTIVIDADES=/recomendaciones
